--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="firstName">First Name</label>
+		<input type="text" name="firstName" id="firstName" />
+		<label for="lastName">Last Name</label>
+		<input type="text" name="lastName" id="lastName" />
+		<label for="phoneNumber">Phone Number</label>
+		<input type="tel" name="phoneNumber" id="phoneNumber" />
+		<label for="emailId">Email Id</label>
+		<input type="email" name="emailId" id="emailId" />
+		<button type="submit" onclick="onClickSubmit(event)">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
