--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
 	<!-- the entire body must be written by student -->
 	<form>
 		<label for="firstName">First Name</label>
-		<input type="text" name="firstName" id="firstName" />
+		<input type="text" name="First Name" id="firstName" />
 		<label for="lastName">Last Name</label>
-		<input type="text" name="lastName" id="lastName" />
+		<input type="text" name="Last Name" id="lastName" />
 		<label for="phoneNumber">Phone Number</label>
-		<input type="tel" name="phoneNumber" id="phoneNumber" />
+		<input type="tel" name="Phone Number" id="phoneNumber" />
 		<label for="emailId">Email Id</label>
-		<input type="email" name="emailId" id="emailId" />
+		<input type="email" name="Email ID" id="emailId" />
 		<button type="submit" onclick="onClickSubmit(event)">Submit</button>
 	</form>
     <script type="text/javascript" src="./script.js">
